# SOS-Assignment-3-WISE-24-25

./: conda_env.yml  croissant__metadata.json  croissant_ctg.json  hello.py  pyproject.toml
PySOMVis/: examples.ipynb  training_assignment.ipynb
turn_in/: conda_env.yml  pyproject.toml
turn_in/training_assignment_md/: training_assignment.md
